Kolejny commit, malo ambitna zmiana w pliku index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <title>Akademia Java</title>
 <body>
 <h1>Strona testowa na potrzeby pracy domowej :)</h1>	
+<h2>Mało ambitna modyfikacja pliku index.html</h2>
 </body>
